--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Привет!</title>
-    
+    <div id='pic_cntr'></div>
 </head>
 <body>
     <script src="script.js"></script>
